2001-02-06  Arik Devens  <arik@eazel.com>

	reviewed by: Eskil Heyn Olsen  <eskil@eazel.com>

	Fixed bug 5919, Preferences dialog jumps around the screen.
	
	* libnautilus-extensions/nautilus-preferences-dialog.c:
	(nautilus_preferences_dialog_construct): Removed the center
	positioning so that the dialog stays where the user put it.

2001-02-06  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 1736, if icons on desktop are offscreen, need to
	move them somewhre on screen.
	
	* libnautilus-extensions/nautilus-icon-container.c:
	(icon_set_position), (nautilus_icon_container_move_icon):
	icon_set_position may modify the x and y location of the
	icon.  nautilus_icon_container_move_icon should use the
	modified position instead of the original x and y postion
	when writing the position out into the metafile.

2001-02-06  Andy Hertzfeld  <andy@eazel.com>

	* src/file-manager/fm-properties-window.c:
	(widget_destroy_callback), (icon_selected_callback),
	(icon_cancel_pressed), (list_icon_selected_callback),
	(entry_activated), (select_image_button_callback):
	fixed bug 6280, custom icon selection should use gnome-icon-sel
	instead of the generic file browser, so now it does.
	 
2001-02-06  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Michael Engber  <engber@eazel.com>

	* src/nautilus-sidebar.c: (nautilus_sidebar_initialize_class),
	(nautilus_sidebar_size_allocate), (nautilus_sidebar_realize):
	Tell X not to clear the window contents when the sidebar is
	resized.  Since we double buffer its contents, this will reduce
	(but not eliminate) flicker in the sidebar.
	
2001-02-06  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Laszlo Kovacs  <laszlo.kovacs@sun.com>

	Fixed bug 795 (help component installs files in nautilus prefix,
	but uses gnome-libs prefix to find them later) by expanding the
	set of places Nautilus looks for help files.

	* components/help/hyperbola-filefmt.c:
	(fmt_man_populate_tree_for_subdir): Changed to look in more places